--- a/Projet.css
+++ b/Projet.css
@@ -1,43 +1,66 @@
-body{
-  background-image:url('warframe.jpg');
-  background-size:100%,100%;
-  background-image:no-repeat;
-
+body {
+  height: 100vh;
+  width: 100%;
+  background-image: url(warframe3.jpg);
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-position: 0px 120px;
 }
 
-nav{
+nav {
   display: inline-block;
   text-align: right;
   vertical-align: middle;
-  width:60%;
+  position: relative;
+  right: 20px;
+  bottom: 65px;
+  width: 100%;
 }
 
-nav li{
-  display:inline-block;
-  margin-left:15px;
-  font-size:1.1em;
-
+nav li {
+  display: inline-block;
+  margin-left: 20px;
+  font-size: 1.1em;
 }
 
-header{
-  width:60%;
-  margin:auto;
-  text-align:center;
-
+header {
+  width: 100%;
+  margin: auto;
+  text-align: left;
+  vertical-align: middle;
+  position: fixed;
+  z-index: 3;
+  color: white;
 }
 
-header h1{
-  text-align: center;
-  width:auto;
-  margin:auto;
+header h1 {
+  text-align: left;
+  width: auto;
+  margin: auto;
   display: inline-block;
   vertical-align: middle;
 }
 
-h1 img{
-display: inline-block;
-width:auto;
-margin:auto;
-vertical-align: middle;
-margin-right: 10px;
+h1 img {
+  display: inline-block;
+  width: auto;
+  margin: auto;
+  vertical-align: middle;
+  margin-right: 10px;
+}
+
+.topBorder {
+  width: 100%;
+  height: 15vh;
+  padding-top: 15px;
+  border: 1px solid black;
+  border-radius: 10px;
+  vertical-align: middle;
+  display: inline-block;
+  background-color: black;
+}
+
+header a {
+  color: white;
+  text-decoration: none;
 }
