--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -15,11 +15,15 @@ body{
 }
 
 .rem{
-  height:2rem;
+  height:3rem;
 }
 
 .font-family-germania {
   font-family: 'Germania One', cursive;
+}
+
+.bg-dark-opac{
+    background-color:rgba(52,58,54,0.7);
 }
 
 .topBorder {
@@ -28,7 +32,7 @@ body{
   padding-top: 1%;
   border: 1px solid black;
   border-radius: 10px;
-  background-color: black;
+  background-color: rgba(0,0,0,0.5);
 }
 
 .redBorder{
