--- a/assets/css/ProjetHomePage.css
+++ b/assets/css/ProjetHomePage.css
@@ -1,8 +1,6 @@
 body {
-  background-image: url(../Images/warframe7.jpg);
-  
-  background-repeat: no-repeat;
-}
+      background:#222531;
+  }
 
 .rem{
   height:2rem;
@@ -34,11 +32,29 @@ body {
   justify-content: center;
 }
 
+video {
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width:100%;
+}
+
 @media screen and (max-width:375px) {
   #homePageText {
     font-size: 0.8rem;
   }
 
+  video{
+      display:none;
+  }
+  
+  body {
+      background-image: url(../Images/warframe7.jpg);
+      background-repeat: no-repeat;
+  }
 
   #miniWar {
     display: none;
@@ -70,6 +86,15 @@ body {
     display: none;
   }
 
+  video{
+      display:none;
+  }
+  
+  body {
+      background-image: url(../Images/warframe7.jpg);
+      background-repeat: no-repeat;
+  }
+  
   .topBorder h1 {
     display: none;
   }
@@ -95,7 +120,16 @@ body {
   #miniWar {
     display: none;
   }
-
+  
+  video{
+      display:none;
+  }
+  
+  body {
+      background-image: url(../Images/warframe7.jpg);
+      background-repeat: no-repeat;
+  }
+  
   .topBorder h1 {
     display: none;
   }
@@ -121,7 +155,16 @@ body {
   #miniWar {
     display: none;
   }
-
+  
+  video{
+      display:none;
+  }
+  
+  body {
+      background-image: url(../Images/warframe7.jpg);
+      background-repeat: no-repeat;
+  }
+  
   .topBorder h1 {
     display: none;
   }
@@ -144,6 +187,15 @@ body {
     font-size: 1.3rem;
   }
 
+  video{
+      display:none;
+  }
+  
+  body {
+      background-image: url(../Images/warframe7.jpg);
+      background-repeat: no-repeat;
+  }
+  
   #miniWar {
     display: none;
   }
@@ -173,7 +225,16 @@ body {
   #miniWar {
     display: none;
   }
-
+  
+  video{
+      display:none;
+  }
+  
+  body {
+      background-image: url(../Images/warframe7.jpg);
+      background-repeat: no-repeat;
+  }
+  
   .topBorder h1 {
     display: none;
   }
