--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -1,25 +1,25 @@
 form {
-  width: 24rem;
+    width: 24rem;
 }
 
 #personnalInfos input{
-  width:20rem;
+    width:20rem;
 }
 
 #personnalInfos label{
-  width:15rem;
+    width:15rem;
 }
 
 body{
-  background-color:#343a40;
+    background-color:#343a40;
 }
 
 .rem{
-  height:1rem;
+    height:1rem;
 }
 
 .font-family-germania {
-  font-family: 'Germania One', cursive;
+    font-family: 'Germania One', cursive;
 }
 
 .bg-dark-opac{
@@ -27,236 +27,248 @@ body{
 }
 
 .topBorder {
-  width: 100%;
-  height: 6rem;
-  padding-top: 1%;
-  border: 1px solid black;
-  border-radius: 10px;
-  background-color: rgba(0,0,0,0.5);
+    width: 100%;
+    height: 6rem;
+    padding-top: 1%;
+    border: 1px solid black;
+    border-radius: 10px;
+    background-color: rgba(0,0,0,0.5);
 }
 
 .redBorder{
-  border:red 4px solid
+    border:red 4px solid
 }
 
 .greenBorder{
-  border:green 4px solid
+    border:green 4px solid
 }
 
 
 
 @media screen and (max-width:375px) {
 
-  #miniWar {
-    display: none;
-  }
+    #miniWar {
+        display: none;
+    }
 
-  .topBorder h1 {
-    display: none;
-  }
+    .topBorder h1 {
+        display: none;
+    }
 
-  .topBorder {
-    height: 2rem;
-  }
+    .topBorder {
+        height: 2rem;
+    }
 
-  .warButton {
-    margin-top: -0.5rem;
-  }
+    .warButton {
+        margin-top: -0.5rem;
+    }
+    
+    form.w-75{
+    width:100%!important
+    }
 }
 
 @media screen and (min-width:376px) and (max-width:414px) {
 
-  #miniWar {
-    display: none;
-  }
+    #miniWar {
+        display: none;
+    }
 
-  .topBorder h1 {
-    display: none;
-  }
+    .topBorder h1 {
+        display: none;
+    }
 
-  .topBorder {
-    height: 2.2rem;
-  }
+    .topBorder {
+        height: 2.2rem;
+    }
 
-  .warButton {
-    margin-top: -0.4rem;
-  }
+    .warButton {
+        margin-top: -0.4rem;
+    }
 }
 
 @media screen and (min-width:415px) and (max-width:480px) {
 
-  #miniWar {
-    display: none;
-  }
+    #miniWar {
+        display: none;
+    }
 
-  .topBorder h1 {
-    display: none;
-  }
+    .topBorder h1 {
+        display: none;
+    }
 
-  .topBorder {
-    height: 2.4rem;
-  }
+    .topBorder {
+        height: 2.4rem;
+    }
 
 
-  .warButton {
-    margin-top: -0.3rem;
-  }
+    .warButton {
+        margin-top: -0.3rem;
+    }
 }
 
 @media screen and (min-width:481px) and (max-width:550px) {
 
-  #miniWar {
-    display: none;
-  }
+    #miniWar {
+        display: none;
+    }
 
-  .topBorder h1 {
-    display: none;
-  }
+    .topBorder h1 {
+        display: none;
+    }
 
-  .topBorder {
-    height: 2.4rem;
-  }
+    .topBorder {
+        height: 2.4rem;
+    }
 
 
-  .warButton {
-    margin-top: -0.2rem;
-  }
+    .warButton {
+        margin-top: -0.2rem;
+    }
 }
 
 @media screen and (min-width:551px) and (max-width:650px) {
 
-  #miniWar {
-    display: none;
-  }
+    #miniWar {
+        display: none;
+    }
 
-  .topBorder h1 {
-    display: none;
-  }
+    .topBorder h1 {
+        display: none;
+    }
 
-  .topBorder {
-    height: 2.6rem;
-  }
+    .topBorder {
+        height: 2.6rem;
+    }
 
 
-  .warButton {
-    margin-top: -0.2rem;
-  }
+    .warButton {
+        margin-top: -0.2rem;
+    }
 }
 
 @media screen and (min-width:651px) and (max-width:700px) {
 
-  #miniWar {
-    display: none;
-  }
+    #miniWar {
+        display: none;
+    }
 
-  .topBorder h1 {
-    display: none;
-  }
+    .topBorder h1 {
+        display: none;
+    }
 
-  .topBorder {
-    height: 2.9rem;
-  }
+    .topBorder {
+        height: 2.9rem;
+    }
 
 }
 
 @media screen and (min-width:701px) and (max-width:800px) {
 
-  #miniWar {
-    display: none;
-  }
+    #miniWar {
+        display: none;
+    }
 
-  .topBorder h1 {
-    display: none;
-  }
+    .topBorder h1 {
+        display: none;
+    }
 
-  .topBorder {
-    height: 2.9rem;
-  }
+    .topBorder {
+        height: 2.9rem;
+    }
+    
+    form.w-75{
+    width:100%!important
+    }
 
 }
 
 @media screen and (min-width:801px) and (max-width:900px) {
 
-  #miniWar {
-    display: none;
-  }
+    #miniWar {
+        display: none;
+    }
 
-  .topBorder h1 {
-    display: none;
-  }
+    .topBorder h1 {
+        display: none;
+    }
 
-  .topBorder {
-    height: 3.7rem;
-  }
+    .topBorder {
+        height: 3.7rem;
+    }
 
-  .warButton {
-    margin-top: 0.2rem;
-  }
+    .warButton {
+        margin-top: 0.2rem;
+    }
 }
 
 @media screen and (min-width:901px) and (max-width:991px) {
 
-  #miniWar {
-    display: none;
-  }
+    #miniWar {
+        display: none;
+    }
 
-  .topBorder h1 {
-    display: none;
-  }
+    .topBorder h1 {
+        display: none;
+    }
 
-  .topBorder {
-    height: 3.7rem;
-    text-align: center;
-  }
+    .topBorder {
+        height: 3.7rem;
+        text-align: center;
+    }
 
-  .warButton {
-    margin-top: 0.2rem;
-  }
+    .warButton {
+        margin-top: 0.2rem;
+    }
 }
 
 @media screen and (min-width:992px) and (max-width:1024px) {
 
-  #miniWar {
-    display: none;
-  }
+    #miniWar {
+        display: none;
+    }
 
-  .topBorder h1 {
-    font-size: 2.4rem;
-  }
+    .topBorder h1 {
+        font-size: 2.4rem;
+    }
 
-  .topBorder {
-    height: 3.7rem;
-    text-align: center;
-  }
+    .topBorder {
+        height: 3.7rem;
+        text-align: center;
+    }
 
-  #navbarNav {
-    position: relative;
-    left: 7rem;
-  }
+    #navbarNav {
+        position: relative;
+        left: 7rem;
+    }
+    
+    form.w-75{
+    width:80%!important
+    }
 }
 
 @media screen and (min-width:1025px) and (max-width:1280px) {
 
-  .topBorder h1 {
-    font-size: 3rem;
-  }
+    .topBorder h1 {
+        font-size: 3rem;
+    }
 
-  #navbarNav {
-    position: relative;
-    left: 9rem;
-    margin-top: 1rem;
-  }
+    #navbarNav {
+        position: relative;
+        left: 9rem;
+        margin-top: 1rem;
+    }
 }
 
 @media screen and (min-width:1281px) {
 
-  .topBorder h1 {
-    font-size: 3.2rem;
-  }
+    .topBorder h1 {
+        font-size: 3.2rem;
+    }
 
-  #navbarNav {
-    position: relative;
-    left: 10rem;
-    margin-top: 1rem;
-  }
+    #navbarNav {
+        position: relative;
+        left: 10rem;
+        margin-top: 1rem;
+    }
 }
