ajax du formulaire fonctionnel

--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -36,11 +36,11 @@ body{
 }
 
 .redBorder{
-    border:red 4px solid
+    border:red 2px solid;
 }
 
 .greenBorder{
-    border:green 4px solid
+    border:green 4px solid;
 }
 
 
