--- a/assets/css/ProjetHomePage.css
+++ b/assets/css/ProjetHomePage.css
@@ -1,8 +1,8 @@
-body {
-/*    background-image: url(../Images/warframe7.jpg);
+/*body {
+    background-image: url(../Images/warframe7.jpg);
     background-size: cover;
-    background-repeat: no-repeat;*/
-}
+    background-repeat: no-repeat;
+}*/
 
 video#bgvid {
   position: fixed; 
@@ -26,8 +26,8 @@ video#bgvid {
     border-color:transparent;
 }
 
-.font-family-germania {
-    font-family: 'Germania One', cursive;
+.font-family-Michroma {
+    font-family: 'Michroma', sans-serif;
 }
 
 .bg-dark-opac{
@@ -35,7 +35,7 @@ video#bgvid {
 }
 
 .bg-light-opac{
-    background-color:rgba(248,249,250,0.9); 
+    background-color:rgba(248,249,250,0.7); 
 }
 
 .topBorder {
@@ -81,10 +81,12 @@ video {
     display:none;
 }
 
-.btn-dark {
-    color:#fff;
-    background-color:#292d2c;
-    border-color:#292d2c;
+.list-group-item{
+    position:relative;
+    display:block;
+    padding:.75rem 1.25rem;
+    margin-bottom:-1px;
+    border:1px solid rgba(0,0,0,.125);
 }
 
 @media(min-width:768px) {
@@ -103,6 +105,12 @@ video {
     .accordCard .accordCardCollapse{
         display:block;
     }
+    
+    .btn-dark {
+    color:#fff;
+    background-color:#34403F;
+    border-color:#292d2c;
+}
 }
 
 @media(max-width:767px){
@@ -114,27 +122,28 @@ video {
         display: block;
         opacity: 1;
     }
-/*    body {
-        background-image: url(../Images/warframe7.jpg);
-        background-position: 77%;
-        background-repeat: no-repeat;
-    }*/
+    
+    .btn-dark {
+    color:#fff;
+    background-color:#707471;
+    border-color:#292d2c;
+}
+   
 
 }
 
 @media screen and (max-width:375px) {
-    #homePageText {
-        font-size: 0.8rem;
-    }
 
     video{
         display:none;
     }
 
-/*    body {
+    body {
         background-image: url(../Images/warframe7.jpg);
+        background-size: cover;
+        background-position: 77%;
         background-repeat: no-repeat;
-    }*/
+    }
 
     #miniWar {
         display: none;
@@ -147,20 +156,13 @@ video {
     .topBorder {
         height: 2rem;
     }
-
-    #divHomeText {
-        height: 10rem;
-    }
-
+    
     .warButton {
         margin-top: -0.5rem;
     }
 }
 
 @media screen and (min-width:376px) and (max-width:414px) {
-    #homePageText {
-        font-size: 1rem;
-    }
 
     #miniWar {
         display: none;
@@ -172,8 +174,11 @@ video {
 
     body {
         background-image: url(../Images/warframe7.jpg);
+        background-size: cover;
+        background-position: 77%;
         background-repeat: no-repeat;
     }
+
 
     .topBorder h1 {
         display: none;
@@ -183,19 +188,12 @@ video {
         height: 2.2rem;
     }
 
-    #divHomeText {
-        height: 11rem;
-    }
-
     .warButton {
         margin-top: -0.4rem;
     }
 }
 
 @media screen and (min-width:415px) and (max-width:480px) {
-    #homePageText {
-        font-size: 1.3rem;
-    }
 
     #miniWar {
         display: none;
@@ -207,6 +205,8 @@ video {
 
     body {
         background-image: url(../Images/warframe7.jpg);
+        background-size: cover;
+        background-position: 77%;
         background-repeat: no-repeat;
     }
 
@@ -216,10 +216,6 @@ video {
 
     .topBorder {
         height: 2.4rem;
-    }
-
-    #divHomeText {
-        height: 13rem;
     }
 
     .warButton {
@@ -228,9 +224,6 @@ video {
 }
 
 @media screen and (min-width:481px) and (max-width:550px) {
-    #homePageText {
-        font-size: 1.3rem;
-    }
 
     #miniWar {
         display: none;
@@ -242,9 +235,11 @@ video {
 
     body {
         background-image: url(../Images/warframe7.jpg);
+        background-size: cover;
+        background-position: 77%;
         background-repeat: no-repeat;
     }
-
+    
     .topBorder h1 {
         display: none;
     }
@@ -252,20 +247,13 @@ video {
     .topBorder {
         height: 2.4rem;
     }
-
-    #divHomeText {
-        height: 15rem;
-    }
-
+    
     .warButton {
         margin-top: -0.2rem;
     }
 }
 
 @media screen and (min-width:551px) and (max-width:650px) {
-    #homePageText {
-        font-size: 1.3rem;
-    }
 
     video{
         display:none;
@@ -273,6 +261,8 @@ video {
 
     body {
         background-image: url(../Images/warframe7.jpg);
+        background-size: cover;
+        background-position: 77%;
         background-repeat: no-repeat;
     }
 
@@ -288,19 +278,12 @@ video {
         height: 2.6rem;
     }
 
-    #divHomeText {
-        height: 18rem;
-    }
-
     .warButton {
         margin-top: -0.2rem;
     }
 }
 
 @media screen and (min-width:651px) and (max-width:700px) {
-    #homePageText {
-        font-size: 1.6rem;
-    }
 
     #miniWar {
         display: none;
@@ -312,6 +295,8 @@ video {
 
     body {
         background-image: url(../Images/warframe7.jpg);
+        background-size: cover;
+        background-position: 77%;
         background-repeat: no-repeat;
     }
 
@@ -322,16 +307,9 @@ video {
     .topBorder {
         height: 2.9rem;
     }
-
-    #divHomeText {
-        height: 19rem;
-    }
 }
 
 @media screen and (min-width:701px) and (max-width:800px) {
-    #homePageText {
-        font-size: 1.6rem;
-    }
 
     #miniWar {
         display: none;
@@ -344,16 +322,9 @@ video {
     .topBorder {
         height: 2.9rem;
     }
-
-    #divHomeText {
-        height: 21rem;
-    }
 }
 
 @media screen and (min-width:801px) and (max-width:900px) {
-    #homePageText {
-        font-size: 2.2rem;
-    }
 
     #miniWar {
         display: none;
@@ -367,19 +338,14 @@ video {
         height: 3.7rem;
     }
 
-    #divHomeText {
-        height: 22rem;
-    }
 
     .warButton {
         margin-top: 0.2rem;
     }
 }
 
-@media screen and (min-width:901px) and (max-width:991px) {
-    #homePageText {
-        font-size: 2.2rem;
-    }
+@media screen and (min-width:901px) and (max-width:1200px) {
+
 
     #miniWar {
         display: none;
@@ -394,74 +360,8 @@ video {
         text-align: center;
     }
 
-    #divHomeText {
-        height: 22rem;
-    }
-
     .warButton {
         margin-top: 0.2rem;
     }
 }
 
-@media screen and (min-width:992px) and (max-width:1024px) {
-    #homePageText {
-        font-size: 2.2rem;
-    }
-
-    #miniWar {
-        display: none;
-    }
-
-    .topBorder h1 {
-        font-size: 2.4rem;
-    }
-
-    .topBorder {
-        height: 3.7rem;
-        text-align: center;
-    }
-
-    #divHomeText {
-        height: 22rem;
-    }
-
-    #navbarNav {
-        position: relative;
-        left: 7rem;
-    }
-}
-
-@media screen and (min-width:1025px) and (max-width:1280px) {
-    #homePageText {
-        font-size: 2.8rem;
-    }
-
-    .topBorder h1 {
-        font-size: 3rem;
-    }
-
-    #divHomeText {
-        height: 25rem;
-    }
-
-    #navbarNav {
-        position: relative;
-        left: 9rem;
-        margin-top: 1rem;
-    }
-}
-
-@media screen and (min-width:1281px) {
-    #homePageText {
-        font-size: 3rem;
-    }
-
-    .topBorder h1 {
-        font-size: 3.2rem;
-    }
-
-    #divHomeText {
-        height: 34rem;
-    }
-
-}
