password hash en place, test de presence du pseudo en place

--- a/assets/css/ProjetHomePage.css
+++ b/assets/css/ProjetHomePage.css
@@ -3,7 +3,10 @@
     background-size: cover;
     background-repeat: no-repeat;
 }*/
-
+a{
+    outline:0;
+    transition:0.3s;
+}
 video#bgvid {
     position: fixed; 
     right: 0; 
